# DataFlowBuilder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cliff.toml  conftest.py  install-hooks.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: commit-msg  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  dependency-review.yml  release.yml
assets/: icon_macos.icns
docs/: index.html
src/: main.py  utils.py
src/core/: __init__.py  compliance_checker.py  constants.py  data_generator.py  field_types.py  flow_manager.py  geo_api.py  storage.py
src/views/: app.py  compliance_ui.py  components.py  concat_editor.py  editor.py  field_editor.py  folder_tree.py  generated_runs_view.py  home.py  preset_manager.py
tests/: test_compliance_checker.py  test_components_logic.py  test_data_generator.py  test_editor_logic.py  test_field_types.py  test_flow_manager.py  test_generated_runs_view.py  test_geo_api.py  test_storage.py
