[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "DataFlowBuilder"
version = "1.0.0"
description = "Créer, organiser et gérer vos flux de données"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"

# ── Dépendances runtime ───────────────────────────────────────────────────────
# Source unique — ne pas dupliquer dans requirements.txt
dependencies = [
    "flet>=0.82",
    "flet-desktop>=0.82",   # requis par `flet pack` pour l'exécutable bureau
    "faker>=40.8.0",
]

# ── Groupes optionnels ────────────────────────────────────────────────────────
#
#  dev   → pip install -e ".[dev]"    (CI lint + tests + local)
#  build → pip install -e ".[build]"  (CI build.yml uniquement)
#  all   → pip install -e ".[all]"    (poste dev complet)
#
[project.optional-dependencies]
dev = [
    # Tests
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",        # exécution parallèle (-n auto)
    # Qualité code
    "ruff>=0.4",
    "mypy>=1.10",
    "types-setuptools",
    # Sécurité
    "bandit[toml]>=1.7",
    # Outils locaux
    "pre-commit>=4.5",
    # Release
    "git-cliff>=2.3",
]
build = [
]
all = [
    "DataFlowBuilder[dev,build]",
]

[tool.setuptools.packages.find]
where = ["src"]

# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion    = "8.0"
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -ra
    --strict-markers
    --tb=short
    --cov=src
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml:coverage.xml
    --cov-fail-under=70
"""
markers = [
    "unit: Tests unitaires isolés (aucune dépendance externe)",
    "integration: Tests d'intégration entre modules",
    "slow: Tests lents (skippés par défaut en local)",
    "network: Tests utilisant un accès API externe",
]

# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/views/*",   # UI Flet — non testable headless
    "src/main.py",   # point d'entrée Flet
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = [
    "E501",  # line too long — géré par le formatter
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.format]
quote-style             = "double"
indent-style            = "space"
skip-magic-trailing-comma = false

# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
exclude                = ["tests/", "scripts/"]

# ─────────────────────────────────────────────────────────────────────────────
[tool.bandit]
skips        = ["B101"]
exclude_dirs = ["tests", "scripts"]

[tool.flet.app]
path = "src"
module = "src/main.py"
exclude = [".git"]
hide_window_on_start = true

[tool.flet]
product = "Data Flow Builder"
artifact = "DataFlowBuilder"
company = "DataFlowBuilder"
copyright = "Copyright © 2026 CrEagleOne"

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]     # or [tool.flet.<PLATFORM>.cleanup]
app = true
packages = true
app_files = ["**/*.c", "**/*.h"]
package_files = ["**/*.pyi"]

[tool.flet.app.boot_screen]
show = true
message = "Préparation des fichiers en cours…"